vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagAssociation_v2__c/SDO_Analytics_AIAgentTagAssociation_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentTagAssociation</label>
    <nameField>
        <label>AIAgentTagAssociation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentTagAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>