vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagAssociation_v2__c/fields/AI_Agent_Moment_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Moment_Id__c</fullName>
    <label>AI Agent Moment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>