vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagAssociation_v2__c/fields/Association_Reason__c.field-meta.xml
<CustomField>
    <fullName>Association_Reason__c</fullName>
    <label>Association Reason</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>