vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagAssociation_v2__c/fields/Created_Days__c.field-meta.xml
<CustomField>
    <fullName>Created_Days__c</fullName>
    <label>Created Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>