vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagAssociation_v2__c/fields/Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Timestamp__c</fullName>
    <formula>DATETIMEVALUE(TEXT(TODAY() + Created_Days__c) + &quot; &quot; + Created_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Timestamp</label>
    <type>DateTime</type>
</CustomField>