vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagAssociation_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_Moment_Id__c</columns>
    <columns>AI_Agent_Session_Id__c</columns>
    <columns>AI_Agent_Tag_Definition_Association_Id__c</columns>
    <columns>AI_Agent_Tag_Id__c</columns>
    <columns>Association_Reason__c</columns>
    <columns>Created_Time__c</columns>
    <columns>Created_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>